--- a/makerspace-frontend/public/index.html
+++ b/makerspace-frontend/public/index.html
@@ -15,6 +15,8 @@
     <div id="app"></div>
     <a href="/request">Request Form</a>
     <a href="/operator">Operator View</a>
+    <a href="/job">Job View</a>
+    <a href="/testing">Testing View</a>
     <!-- built files will be auto injected -->
   </body>
 </html>
